--- a/layouts/partials/bio-content.html
+++ b/layouts/partials/bio-content.html
@@ -1,4 +1,4 @@
-<span class="nested-links">
+<span>
   {{ .Site.Params.About }}
   Subscribe to <a class="newsletter-link" href="https://tinyletter.com/developerdavo-noreply" target="_blank" rel="noopener">my newsletter</a> 
   for the latest content if this interests you! 
