Update link to newsletter

--- a/layouts/partials/bio-content.html
+++ b/layouts/partials/bio-content.html
@@ -1,5 +1,5 @@
 <span>
   {{ .Site.Params.About }}
-  Subscribe to <a class="newsletter-link" href="https://tinyletter.com/developerdavo-noreply" target="_blank" rel="noopener">my newsletter</a> 
+  Subscribe to <a class="newsletter-link" href="https://learnitmyway.com/newsletter" target="_blank" rel="noopener">my newsletter</a> 
   for the latest content if this interests you! 
 </span>
