move img dir out of dist dir

--- a/layouts/partials/bio.html
+++ b/layouts/partials/bio.html
@@ -2,7 +2,7 @@
   <div class='bio bio--small'>
     <div class='bio__top'>
       <div class='bio__left'>
-        <img class='bio__img' src='{{ "dist/img/profile-pic.jpg" | absURL }}' alt='Profile pic' />
+        <img class='bio__img' src='{{ "img/profile-pic.jpg" | absURL }}' alt='Profile pic' />
       </div>
       <div class='bio__right'>
         {{ partial "social-follow.html" . }}
@@ -16,7 +16,7 @@
 
   <div class='bio bio--large'>
       <div class='bio__left'>
-        <img class='bio__img' src='{{ "dist/img/profile-pic.jpg" | absURL }}' alt='Profile pic' />
+        <img class='bio__img' src='{{ "img/profile-pic.jpg" | absURL }}' alt='Profile pic' />
       </div>
       <div class='bio__large__right'>
         <div class='bio__large__top'>
